--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "tailwindcss": "^2.0.4",
     "tailwind": "^4.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^7.24.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
